@@ -6,6 +6,7 @@ XMPP4R 0.3.3 (XX/XX/XXXX)
 * a Helper to assist with XEP-0115 Entity Capabilities 
 * SASL anonymous support
 * File transfer fixes
+* MUC room configuration fixes
 
 XMPP4R 0.3.2 (15/10/2007)
 =========================
